spring jdbc code

--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -15,6 +15,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>spring-jdbc</module>
         <module>spring-webmvc</module>
         <module>rest-on-spring-webmvc</module>
     </modules>
