add spring part code

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-cloud-project</module>
         <module>spring-boot-project</module>
         <module>concurrency-project</module>
+        <module>spring-project</module>
     </modules>
     <packaging>pom</packaging>
 
