--- a/concurrency-project/java-10-concurrency/pom.xml
+++ b/concurrency-project/java-10-concurrency/pom.xml
@@ -2,16 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>concurrency-project</artifactId>
-        <groupId>com.purchasing</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-
+    <!--<parent>-->
+        <!--<artifactId>concurrency-project</artifactId>-->
+        <!--<groupId>com.purchasing</groupId>-->
+        <!--<version>1.0-SNAPSHOT</version>-->
+    <!--</parent>-->
     <groupId>com.purchasing</groupId>
     <version>1.0-SNAPSHOT</version>
     <artifactId>java-10-concurrency</artifactId>
+    <modelVersion>4.0.0</modelVersion>
     <build>
         <plugins>
             <plugin>
