--- a/spring-project/pom.xml
+++ b/spring-project/pom.xml
@@ -7,9 +7,14 @@
         <groupId>com.purchasing</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.purchasing</groupId>
     <artifactId>spring-project</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
+    <modules>
+        <module>spring-xml-extension</module>
+    </modules>
 
 </project>
