--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-webmvc</module>
         <module>rest-on-spring-webmvc</module>
         <module>first-spring-boot-app</module>
+        <module>spring-boot-bean-validation</module>
   </modules>
 
 
