--- a/spring-boot-project/spring-boot-app/pom.xml
+++ b/spring-boot-project/spring-boot-app/pom.xml
@@ -8,9 +8,9 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.purchasing</groupId>
-  <artifactId>first-spring-boot-app</artifactId>
+  <artifactId>spring-boot-app</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>first-spring-boot-app</name>
+  <name>spring-boot-app</name>
   <packaging>war</packaging>
   <dependencies>
 
