--- a/spring-boot-project/spring-boot-application/pom.xml
+++ b/spring-boot-project/spring-boot-application/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.purchasing</groupId>
-    <artifactId>rest-on-spring-webmvc</artifactId>
+    <artifactId>spring-boot-application</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>rest-on-spring-webmvc</name>
+    <name>spring-boot-application</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -17,21 +17,22 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
     </dependencies>
 
@@ -43,4 +44,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
