--- a/spring-boot-project/spring-boot-validation/pom.xml
+++ b/spring-boot-project/spring-boot-validation/pom.xml
@@ -4,11 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.purchasing</groupId>
-    <artifactId>spring-application</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>spring-boot-validation</artifactId>
     <packaging>jar</packaging>
-
-    <name>spring-application</name>
+    <name>spring-boot-validation</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -17,21 +15,31 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- -合理利用好开源的工具 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -44,6 +52,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
