--- a/spring-boot-project/spring-webmvc-rest/pom.xml
+++ b/spring-boot-project/spring-webmvc-rest/pom.xml
@@ -4,9 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.purchasing</groupId>
-    <artifactId>spring-boot-bean-validation</artifactId>
+    <artifactId>spring-webmvc-rest</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>spring-boot-bean-validation</name>
+
+    <name>spring-webmvc-rest</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -18,18 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- -合理利用好开源的工具 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.8</version>
         </dependency>
 
         <dependency>
@@ -37,10 +28,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
     </dependencies>
 
