spring xml extension

--- a/spring-project/pom.xml
+++ b/spring-project/pom.xml
@@ -15,6 +15,8 @@
 
     <modules>
         <module>spring-xml-extension</module>
+        <module>spring-annotation-extension</module>
+        <module>spring-annotation-extension-autoconfig</module>
     </modules>
 
 </project>
