--- a/spring-project/spring-annotation-extension/pom.xml
+++ b/spring-project/spring-annotation-extension/pom.xml
@@ -4,9 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.purchasing</groupId>
-    <artifactId>spring-xml-extension</artifactId>
+    <artifactId>spring-annotation-extension</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>spring-xml-extension</name>
+
+    <name>spring-annotation-extension</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -24,11 +26,6 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
@@ -36,11 +33,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.purchasing</groupId>
-            <artifactId>spring-xml-extension</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -52,4 +44,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
