Spring WebFlux findAll Write

--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -19,7 +19,8 @@
         <module>spring-boot-application</module>
         <module>spring-boot-validation</module>
         <module>spring-webmvc-rest</module>
-  </modules>
+        <module>spring-reactive</module>
+    </modules>
 
 
 </project>
