spring xml extension

--- a/spring-boot-project/spring-jdbc/pom.xml
+++ b/spring-boot-project/spring-jdbc/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
