--- a/spring-boot-project/spring-boot-app/pom.xml
+++ b/spring-boot-project/spring-boot-app/pom.xml
@@ -31,6 +31,13 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.2</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 
     <build>
