--- a/spring-project/spring-annotation-extension-autoconfig/src/main/webapp/WEB-INF/web.xml
+++ b/spring-project/spring-annotation-extension-autoconfig/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 
 <web-app>
 
-  <context-param>
+  <!--<context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/app-context.xml</param-value>
   </context-param>
@@ -25,6 +25,6 @@
   <servlet-mapping>
     <servlet-name>app</servlet-name>
     <url-pattern>/app/*</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping>-->
 
 </web-app>
